Save post table and view posts

--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,9 @@
 <p><form  action="/new" method="POST" role="form">
 <h4>Enter Your Name</h4>
-<input name ="author" type="text" class="form-control" placeholder="Name">
+<input name ="main[author]" type="text" class="form-control" placeholder="Name"  value="<%= @c.author %>"
+>
 <h3>Add new Post</h3>
- <textarea name="content" class="form-control" rows="6" placeholder="Type post text here"></textarea><br>
+ <textarea name="main[content]" class="form-control" rows="6" placeholder="Type post text here"  value="<%= @c.content %>"
+></textarea><br>
   <button type="submit" class="btn btn-primary">Отправить</button>
 </form></p>
